syntax = "proto3";
package telepresence.daemon;

import "google/protobuf/empty.proto";
import "rpc/common/version.proto";
import "rpc/manager/manager.proto";

option go_package = "github.com/telepresenceio/telepresence/rpc/v2/daemon";

// The Daemon service is responsible for managing network overrides and also
// acts as the central point for logging.
service Daemon {
  // Version returns version information from the Daemon
  rpc Version(google.protobuf.Empty) returns (telepresence.common.VersionInfo);

  // Status returns the current connectivity status
  rpc Status(google.protobuf.Empty) returns (DaemonStatus);

  // Quit quits (terminates) the service.
  rpc Quit(google.protobuf.Empty) returns (google.protobuf.Empty);

  // SetOutboundInfo provides the information needed to set up outbound connectivity
  rpc SetOutboundInfo(OutboundInfo) returns (google.protobuf.Empty);

  // SetDnsSearchPath sets a new search path.
  rpc SetDnsSearchPath(Paths) returns (google.protobuf.Empty);
}

message DaemonStatus {
  enum ErrType {
    UNSPECIFIED = 0;
    NOT_STARTED = 1;
    NO_NETWORK = 3;
  }
  ErrType error = 1;
  string dns = 2;
  reserved 3;
}

message Paths {
  repeated string paths = 1;
}

// DNS configuration for the local DNS resolver
message DNSConfig {
  // local_ip is the address of the local DNS server. Only used by Linux systems that have no
  // systemd.resolved configured. Defaults to the first line of /etc/resolv.conf
  bytes local_ip = 1;

  // remote_ip is the address of the kube-dns.kube-system, dns-default.openshift-dns, or similar service,
  bytes remote_ip = 2;

  // Suffixes to exclude
  repeated string exclude_suffixes = 3;

  // Suffixes to include. Has higher prio than the excludes
  repeated string include_suffixes = 4;

  // The maximum time wait for a cluster side host lookup.
  int64 lookup_timeout = 5;
}

// OutboundInfo contains all information that the root daemon needs in order to
// establish outbound traffic to the cluster.
message OutboundInfo {
  // manager_port is the port for the traffic-manager gRPC API.
  int32 manager_port = 1;

  // session makes it possible for the root daemon to identify itself as the
  // same client as the user daemon.
  manager.SessionInfo session = 2;

  // DNS configuration
  DNSConfig dns = 3;

  // also_proxy are user-added subnets.
  repeated manager.IPNet also_proxy_subnets = 5;

  reserved 4;
}